2001-01-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Andreas F Mueller <afm@othello.ch>

	* server-src/amadmin.c (force_no_bump_one): Fix message.

2001-01-01  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/am-dd.c: include "amanda.h"
	* tape-src/am-mt.c: include "amanda.h"
	* tape-src/am-mt.c (main): res is int.
	* tape-src/output-rait.c: include "amanda.h", do not define stderr.
	* tape-src/tapeio.c (xxx_tapefd_read, plain_tapefd_read): second
	  argument should be "char *"
	* tape-src/tapeio.c (xxx_tapefd_write, plain_tapefd_write): second
	  argument should be "const char *"

2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/find.c (find_match): Use todo bit.
	* server-src/find.c (find_dump): No arguments.
	* server-src/find.h (find_dump): Change prototype.
	* server-src/amadmin.c (find): New [host disk]* pair arguments.
	* server-src/amindexd.c: Change call to find_dump().
	* server-src/amtrmidx.c: Change call to find_dump().

2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: Don't check krb5 include if krb5 is not selected.

2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* tape-src/Makefile.am (noinst_HEADERS): Add output-rait.h

2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (diskloop): typo.

2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (diskloop): New [host disk]* pair arguments.
	* server-src/amadmin.c (diskloop, reuse, noreuse): use get_pname()
	instead of argv[0].

2000-12-31  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c (main):log DISK after checking if logfile exist.

2000-12-30 John R. Jackson <jrj@purdue.edu>

	* common-src/bsd-security.c: Improve the .rhosts/.amandahosts messages
	  when things go wrong.  Add support for "bsdsecurity" test program
	  in common-src.
	* common-src/Makefile.am: Ditto.
	* common-src/amanda.h: Ditto.