@@ -14,13 +14,15 @@ amflush \- flush Amanda backup files from holding disk to tape
 .B amflush
 [
 .B -f
-]
+] [
+.B -D
+.I date
+]*
 .I config
 [
 .I host
-[
 .I disk
-]]
+]*
 .SH DESCRIPTION
 .B Amflush
 writes Amanda backups from the holding disks to tape,
@@ -32,6 +34,13 @@ is run.
 When this happens, the problem must be corrected and
 .B amflush
 run by hand.
+.LP
+.B -D
+.I date
+specify the date range you want to flush, 
+.B -D 20001225-7
+will flush all
+dump from 25 december 2000 to 27 december 2000.
 .LP
 You can specify many host/disk expressions, only disks that
 match an expression will be flushed. All disk are flushed if no
